2018-03-13  Nick Clifton  <nickc@redhat.com>

	PR 22957
	* stabs.c (pop_binincl): Fail if the file index is off the end of
	the stack.

2018-03-13  Nick Clifton  <nickc@redhat.com>

	PR 22955
	* stabs.c (parse_number): Add p_end parameter and use it to check
	the validity of the pp parameter.  Add checks to prevent walking
	off the end of the string buffer.
	(parse_stab_string): Likewise.
	(parse_stab_type): Likewise.
	(parse_stab_type_number): Likewise.
	(parse_stab_range_type): Likewise.
	(parse_stab_sun_builtin_type): Likewise.
	(parse_stab_sun_floating_type): Likewise.
	(parse_stab_enum_type): Likewise.
	(parse_stab_struct_type): Likewise.
	(parse_stab_baseclasses): Likewise.
	(parse_stab_struct_fields): Likewise.
	(parse_stab_cpp_abbrev): Likewise.
	(parse_stab_one_struct_field): Likewise.
	(parse_stab_members): Likewise.
	(parse_stab_tilde_field): Likewise.
	(parse_stab_array_type): Likewise.

	* parse_stab: Compute the end of the string and then pass it on to
	individual parser functions.

2018-03-07  Paul Pluzhnikov  <ppluzhnikov@google.com>

	PR binutils/22923
	* binutils/readelf.c (get_ver_flags): Expand buffer to avoid
	overflow.

2018-03-07  Alan Modra  <amodra@gmail.com>

	* configure.ac: Add objdump_private_desc_xcoff for rs6000.
	* configure: Regenerate.

2018-03-05  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/22911
	* objdump.c (is_significant_symbol_name): Return TRUE for all
	.plt* sections.
	(find_symbol_for_address): Replace linear search with binary
	search on dynamic relocations.

2018-03-01  Nick Clifton  <nickc@redhat.com>

	PR 22905
	* dwarf.c (display_debug_ranges): Check that the offset loaded
	from the range_entry structure is valid.

2018-03-01  Alan Modra  <amodra@gmail.com>

	* configure.ac (ALL_LINGUAS): Add sr.  Sort.
	* configure: Regenerate.

2018-02-27  Nick Clifton  <nickc@redhat.com>

	* po/pt.po: New Portuguese translation.
	* configure.ac (ALL_LINGUAS): Add pt.
	* configure: Regenerate.
